Fixed feed spacing

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -87,7 +87,7 @@ div#posts-container
 
   div.post-container
     display: block
-    margin: 0 0 60px 0
+    margin: 30px 0
     padding: 0 0 0 20px
     border-left: 2px solid $dark-gray
 
